// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data-Driven CheckboxGroup 1`] = `
<div
  className="checkbox-group"
>
  <label
    className="checkbox-wrapper"
    style={undefined}
  >
    <span
      className="checkbox"
    >
      <input
        aria-hidden={true}
        checked={false}
        className="checkbox__input"
        defaultChecked={false}
        disabled={undefined}
        name="sports"
        onChange={[Function]}
        type="checkbox"
        value="basketball"
      />
      <span
        aria-checked={false}
        aria-disabled={undefined}
        className="checkbox__inner"
        role="checkbox"
      />
      <span
        className="checkbox__text"
      >
        Basketball(with data)
      </span>
    </span>
  </label>
  <label
    className="checkbox-wrapper"
    style={undefined}
  >
    <span
      className="checkbox"
    >
      <input
        aria-hidden={true}
        checked={false}
        className="checkbox__input"
        defaultChecked={false}
        disabled={undefined}
        name="sports"
        onChange={[Function]}
        type="checkbox"
        value="tennis"
      />
      <span
        aria-checked={false}
        aria-disabled={undefined}
        className="checkbox__inner"
        role="checkbox"
      />
      <span
        className="checkbox__text"
      >
        Tennis(with data)
      </span>
    </span>
  </label>
  <label
    className="checkbox-wrapper"
    style={undefined}
  >
    <span
      className="checkbox"
    >
      <input
        aria-hidden={true}
        checked={false}
        className="checkbox__input"
        defaultChecked={false}
        disabled={undefined}
        name="sports"
        onChange={[Function]}
        type="checkbox"
        value="swimming"
      />
      <span
        aria-checked={false}
        aria-disabled={undefined}
        className="checkbox__inner"
        role="checkbox"
      />
      <span
        className="checkbox__text"
      >
        Swimming(with data)
      </span>
    </span>
  </label>
</div>
`;

exports[`should render right thing and don't change unexpected 1`] = `
<div
  className="checkbox-group"
>
  <label
    className="checkbox-wrapper"
    style={undefined}
  >
    <span
      className="checkbox"
    >
      <input
        aria-hidden={true}
        checked={false}
        className="checkbox__input"
        defaultChecked={false}
        disabled={undefined}
        name="sports"
        onChange={[Function]}
        type="checkbox"
        value="basketball"
      />
      <span
        aria-checked={false}
        aria-disabled={undefined}
        className="checkbox__inner"
        role="checkbox"
      />
      <span
        className="checkbox__text"
      >
        Basketball
      </span>
    </span>
  </label>
  <label
    className="checkbox-wrapper"
    style={undefined}
  >
    <span
      className="checkbox checkbox--checked"
    >
      <input
        aria-hidden={true}
        checked={true}
        className="checkbox__input"
        defaultChecked={false}
        disabled={undefined}
        name="sports"
        onChange={[Function]}
        type="checkbox"
        value="tennis"
      />
      <span
        aria-checked={true}
        aria-disabled={undefined}
        className="checkbox__inner"
        role="checkbox"
      />
      <span
        className="checkbox__text"
      >
        Tennis
      </span>
    </span>
  </label>
  <label
    className="checkbox-wrapper"
    style={undefined}
  >
    <span
      className="checkbox"
    >
      <input
        aria-hidden={true}
        checked={false}
        className="checkbox__input"
        defaultChecked={false}
        disabled={undefined}
        name="sports"
        onChange={[Function]}
        type="checkbox"
        value="swimming"
      />
      <span
        aria-checked={false}
        aria-disabled={undefined}
        className="checkbox__inner"
        role="checkbox"
      />
      <span
        className="checkbox__text"
      >
        Swimming
      </span>
    </span>
  </label>
  <button />
</div>
`;
